// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Matches a snapshot > Basic SVG 1`] = `
<wrapper>
  <svg
    class="tl-container tl-theme__force-sRGB tl-theme__light"
    data-color-mode="light"
    direction="ltr"
    height="564"
    stroke-linecap="round"
    stroke-linejoin="round"
    style="background-color: rgb(249, 250, 251);"
    viewBox="-32 -32 564 564"
    width="564"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs>
      <mask
        id="_export_4_rb_"
      >
        <rect
          fill="white"
          height="8"
          width="8"
          x="0"
          y="0"
        />
        <g
          stroke="black"
          stroke-linecap="round"
        >
          <line
            x1="0.6666666666666666"
            x2="2"
            y1="2"
            y2="0.6666666666666666"
          />
          <line
            x1="3.333333333333333"
            x2="4.666666666666666"
            y1="4.666666666666666"
            y2="3.333333333333333"
          />
          <line
            x1="6"
            x2="7.333333333333333"
            y1="7.333333333333333"
            y2="6"
          />
        </g>
      </mask>
      <pattern
        height="8"
        id="_export_4_ra__hash_pattern_light_0"
        patternUnits="userSpaceOnUse"
        width="8"
      >
        <rect
          fill="#fcfffe"
          height="8"
          mask="url(#_export_4_rb_)"
          width="8"
          x="0"
          y="0"
        />
      </pattern>
      <style>
        @font-face {
  font-family: "tldraw_draw";
  font-weight: normal;
  src: url("data:font/woff2;base64,") format(woff2);
}
      </style>
    </defs>
    <g
      opacity="1"
      transform="matrix(1, 0, 0, 1, 0, 0)"
    >
      <path
        d="M 0 0 L 100 0 L 100 100 L 0 100 Z"
        fill="none"
        stroke="#1d1d1d"
        stroke-width="3.5"
      />
      <foreignobject
        class="tl-export-embed-styles tl-rich-text tl-rich-text-svg"
        height="100"
        width="100"
        x="0"
        y="0"
      >
        <div
          style="display: block; font-family: serif; height: 0px; justify-content: center; align-items: center; padding: 0px; position: static; width: 0px; margin: 0px; border: 0px; font-size: 16px; line-height: normal; color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0);"
          xmlns="http://www.w3.org/1999/xhtml"
        >
          <div
            style="font-size: 22px; color: rgb(0, 0, 0); line-height: 1.35; text-align: center; width: 0px; word-wrap: break-word; overflow-wrap: break-word; white-space: pre-wrap; text-shadow: var(--tl-text-outline); position: static; height: 0px; margin: 0px; padding: 0px; border: 0px;"
          >
            <p
              dir="auto"
              style="position: static; width: 0px; height: 0px; margin: 0px; padding: 0px; border: 0px; color: rgb(0, 0, 0);"
            >
              Hello world
            </p>
          </div>
        </div>
      </foreignobject>
    </g>
    <g
      opacity="1"
      transform="matrix(1, 0, 0, 1, 100, 100)"
    >
      <path
        d="M 0 0 L 50 0 L 50 50 L 0 50 Z"
        fill="none"
        stroke="#1d1d1d"
        stroke-width="3.5"
      />
    </g>
    <g
      opacity="1"
      transform="matrix(1, 0, 0, 1, 400, 400)"
    >
      <path
        d="M 0 0 L 100 0 L 100 100 L 0 100 Z"
        fill="#494949"
      />
      <path
        d="M 0 0 L 100 0 L 100 100 L 0 100 Z"
        fill="url(#_export_4_ra__hash_pattern_light_0)"
      />
      <path
        d="M 0 0 L 100 0 L 100 100 L 0 100 Z"
        fill="none"
        stroke="#1d1d1d"
        stroke-width="3.5"
      />
    </g>
  </svg>
</wrapper>
`;

exports[`Returns all shapes when no ids are provided > All shapes 1`] = `
<wrapper>
  <svg
    class="tl-container tl-theme__force-sRGB tl-theme__light"
    data-color-mode="light"
    direction="ltr"
    height="564"
    stroke-linecap="round"
    stroke-linejoin="round"
    style="background-color: rgb(249, 250, 251);"
    viewBox="-32 -32 564 564"
    width="564"
    xmlns="http://www.w3.org/2000/svg"
  >
    <defs>
      <mask
        id="_export_2_r5_"
      >
        <rect
          fill="white"
          height="8"
          width="8"
          x="0"
          y="0"
        />
        <g
          stroke="black"
          stroke-linecap="round"
        >
          <line
            x1="0.6666666666666666"
            x2="2"
            y1="2"
            y2="0.6666666666666666"
          />
          <line
            x1="3.333333333333333"
            x2="4.666666666666666"
            y1="4.666666666666666"
            y2="3.333333333333333"
          />
          <line
            x1="6"
            x2="7.333333333333333"
            y1="7.333333333333333"
            y2="6"
          />
        </g>
      </mask>
      <pattern
        height="8"
        id="_export_2_r4__hash_pattern_light_0"
        patternUnits="userSpaceOnUse"
        width="8"
      >
        <rect
          fill="#fcfffe"
          height="8"
          mask="url(#_export_2_r5_)"
          width="8"
          x="0"
          y="0"
        />
      </pattern>
      <style>
        @font-face {
  font-family: "tldraw_draw";
  font-weight: normal;
  src: url("data:font/woff2;base64,") format(woff2);
}
      </style>
    </defs>
    <g
      opacity="1"
      transform="matrix(1, 0, 0, 1, 0, 0)"
    >
      <path
        d="M 0 0 L 100 0 L 100 100 L 0 100 Z"
        fill="none"
        stroke="#1d1d1d"
        stroke-width="3.5"
      />
      <foreignobject
        class="tl-export-embed-styles tl-rich-text tl-rich-text-svg"
        height="100"
        width="100"
        x="0"
        y="0"
      >
        <div
          style="display: block; font-family: serif; height: 0px; justify-content: center; align-items: center; padding: 0px; position: static; width: 0px; margin: 0px; border: 0px; font-size: 16px; line-height: normal; color: rgb(0, 0, 0); background-color: rgba(0, 0, 0, 0);"
          xmlns="http://www.w3.org/1999/xhtml"
        >
          <div
            style="font-size: 22px; color: rgb(0, 0, 0); line-height: 1.35; text-align: center; width: 0px; word-wrap: break-word; overflow-wrap: break-word; white-space: pre-wrap; text-shadow: var(--tl-text-outline); position: static; height: 0px; margin: 0px; padding: 0px; border: 0px;"
          >
            <p
              dir="auto"
              style="position: static; width: 0px; height: 0px; margin: 0px; padding: 0px; border: 0px; color: rgb(0, 0, 0);"
            >
              Hello world
            </p>
          </div>
        </div>
      </foreignobject>
    </g>
    <g
      opacity="1"
      transform="matrix(1, 0, 0, 1, 100, 100)"
    >
      <path
        d="M 0 0 L 50 0 L 50 50 L 0 50 Z"
        fill="none"
        stroke="#1d1d1d"
        stroke-width="3.5"
      />
    </g>
    <g
      opacity="1"
      transform="matrix(1, 0, 0, 1, 400, 400)"
    >
      <path
        d="M 0 0 L 100 0 L 100 100 L 0 100 Z"
        fill="#494949"
      />
      <path
        d="M 0 0 L 100 0 L 100 100 L 0 100 Z"
        fill="url(#_export_2_r4__hash_pattern_light_0)"
      />
      <path
        d="M 0 0 L 100 0 L 100 100 L 0 100 Z"
        fill="none"
        stroke="#1d1d1d"
        stroke-width="3.5"
      />
    </g>
  </svg>
</wrapper>
`;
